5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4368/executions/1793_3123.log
== TEST (2019-05-30 19:01:19) 
-- CODE:
from math import*
x=array(eval(input("digite um vetor: ")))
h=0
m=0
while(size(x)>h):
	m=m+(x[h]**-1)
	h=h+1
m=(m/size(x))
m=(m**-1)
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x=array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:01:37) 
-- CODE:
from numpy import*
x=array(eval(input("digite um vetor: ")))
h=0
m=0
while(size(x)>h):
	m=m+(x[h]**-1)
	h=h+1
m=(m/size(x))
m=(m**-1)
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:02:43) 
-- CODE:
from numpy import*
x=array(eval(input("digite um vetor: ")))
h=0
m=0
while(size(x)>h):
	m=m+(x[h]**(-1))
	h=h+1
m=(m/size(x))
m=(m**-1)
print(round(m,2))
-- EXECUTION TIME:
0.896099
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
3.95
---- user output:
3.95
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
2.69
---- user output:
2.69
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.33
---- user output:
2.33
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
